apps/base/ghost/ghost.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: ghost
spec:
  ports:
    - port: 2368
      targetPort: 2368
  selector:
    app: ghost
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - image: ghost:5-alpine
        name: ghost
        ports:
        - containerPort: 2368
          name: ghost
