apps/base/ghost/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: ghost
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None # This creates a 'Headless' service, perfect for databases!
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: ghost
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
